--- a/game.html
+++ b/game.html
@@ -6,24 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/58ae92d97f.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/58ae92d97f.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.7.0.js"
+      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
 
     <title>Match-a-Tile</title>
   </head>
   <body>
+    <nav class="navbar navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand d-flex align-items-center mx-auto" href="#">
+          <div class="logo mx-2"></div>
+          <h1 class="my-0 mx-2">Match-A-Tile</h1>
+        </a>
+        <div class="mx-auto text-center">
+          <p class="my-1">Select Difficulty</p>
+          <div class="btn-group" role="group" aria-label="Difficulty Buttons">
+            <button type="button" class="btn btn-primary rounded mx-1 btn-sm">Easy</button>
+            <button type="button" class="btn btn-primary rounded mx-1 btn-sm">Medium</button>
+            <button type="button" class="btn btn-primary rounded mx-1 btn-sm">Hard</button>
+          </div>
+        </div>
+      </div>
+    </nav>
 
-    
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/script.js" type="text/Javascript"></script>
-</body>
+  </body>
 </html>
