--- a/game.html
+++ b/game.html
@@ -49,6 +49,40 @@
       </div>
     </nav>
 
+    <main class="container-fluid">
+      <div class="row">
+
+        <div class="col-lg-3 d-none d-lg-block side-bar"></div>
+
+        <div class="col-lg-9">
+
+          <div class="row">
+            <div class="col p-0 game-area">
+
+              <div class="grid-container my-4">
+                <div class="grid-item tile" id="tile-1"></div>
+                <div class="grid-item tile" id="tile-1"></div>
+                <div class="grid-item tile" id="tile-1"></div>
+                <div class="grid-item tile" id="tile-1"></div>
+                <div class="grid-item tile" id="tile-1"></div>
+                <div class="grid-item tile" id="tile-1"></div>
+                <div class="grid-item tile" id="tile-1"></div>
+                <div class="grid-item tile" id="tile-1"></div>
+                <div class="grid-item tile" id="tile-1"></div>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col guess-tiles"></div>
+          </div>
+
+        </div>
+
+      </div>
+    </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
