Removed all default margins and padding from Bootstrap rows, containers and columns, and added controls area

--- a/game.html
+++ b/game.html
@@ -49,14 +49,20 @@
       </div>
     </nav>
 
-    <main class="container-fluid">
-      <div class="row">
+    <main class="container-fluid m-0 p-0">
+      <div class="row m-0 p-0 h-100">
 
-        <div class="col-lg-3 d-none d-lg-block side-bar"></div>
+        <!-- Side Bar -->
+        <div class="col-lg-3 m-0 p-0 d-none d-lg-block side-bar"></div>
 
-        <div class="col-lg-9">
+        <!-- Main Area -->
+        <div class="col-lg-9 m-0 p-0">
 
-          <div class="row">
+          <!-- Start/Reset/Info -->
+          <div class="controls m-0 p-0"></div>
+
+          <!-- Game Area -->
+          <div class="row m-0 p-0">
             <div class="col p-0 game-area">
 
               <div class="grid-container my-4">
@@ -74,8 +80,9 @@
             </div>
           </div>
 
-          <div class="row">
-            <div class="col guess-tiles"></div>
+          <!-- Guess Tiles -->
+          <div class="row m-0 p-0">
+            <div class="col m-0 p-0 guess-tiles"></div>
           </div>
 
         </div>
