Added a Start button to the Controls area

--- a/game.html
+++ b/game.html
@@ -125,8 +125,8 @@
 
             </div>
 
-            <div class="col-4 p-0" id="start">
-              
+            <div class="col-4 p-0 d-flex align-items-center justify-content-center" id="start">
+              <button type="button" class="btn btn-lg btn-success" id="startButton" aria-label="Start">Start</button>
             </div>
 
             <div class="col-4 p-0" id="reset"></div>
