Added a Reset button to the Controls area

--- a/game.html
+++ b/game.html
@@ -61,7 +61,7 @@
           <!-- Start/Reset/Info -->
           <div class="row controls m-0 p-2">
 
-            <div class="col-4 p-0" id="about-instructions">
+            <div class="col-4 p-0 align-items-center justify-content-center" id="about-instructions">
 
               <!-- About Button -->
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#aboutModal">
@@ -129,7 +129,9 @@
               <button type="button" class="btn btn-lg btn-success" id="startButton" aria-label="Start">Start</button>
             </div>
 
-            <div class="col-4 p-0" id="reset"></div>
+            <div class="col-4 p-0 d-flex align-items-center justify-content-center" id="reset">
+              <button type="button" class="btn btn-sm btn-danger" id="resetButton" aria-label="Reset">Reset</button>
+            </div>
 
           </div>
 
