Changed background colors of navbar and controls area for testing purposes

--- a/game.html
+++ b/game.html
@@ -32,7 +32,7 @@
     <title>Match-a-Tile</title>
   </head>
   <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar bg-body-tertiary">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center mx-auto" href="#">
           <div id="logo" class="mx-2"></div>
@@ -59,7 +59,7 @@
         <div id="main-area" class="col-lg-9 m-0 p-0">
 
           <!-- Controls -->
-          <div id="controls" class="row m-0 p-2">
+          <div id="controls" class="row m-0 p-2 bg-body-secondary">
 
             <div class="col-4 p-0 align-items-center justify-content-center" id="about-instructions">
 
