--- a/game.html
+++ b/game.html
@@ -34,17 +34,16 @@
   <body>
     
       <div class="container-fluid">
-        <div class="row m-0 p-0">
-          <nav class="navbar bg-body-tertiary">
+        <div class="row p-0 m-0 bg-body-tertiary">
 
-          <div class="col-8 p-0 d-flex align-items-center justify-content-center mx-auto">
+          <div class="col-sm-7 p-0 my-0 my-sm-2 d-flex align-items-center justify-content-center mx-auto">
             <a class="navbar-brand" href="#">
               <div id="logo" class="mx-2"></div>
             </a>
             <h1 class="my-0 mx-2">Match-A-Tile</h1>
           </div>
 
-          <div class="col-4 d-lg-none p-0 d-flex align-items-center justify-content-center mx-auto">
+          <div class="col-sm-5 d-lg-none p-0 my-2 my-sm-0 mx-auto d-flex align-items-center justify-content-center">
 
             <button type="button" class="btn btn-dark btn-sm mx-2" data-bs-toggle="modal" data-bs-target="#aboutModal">
               About
@@ -105,7 +104,6 @@
 
           </div>
 
-          </nav>
         </div>
       </div>
     
