Added a span to show the difficulty selected - to be manipulated with JS later

--- a/game.html
+++ b/game.html
@@ -120,9 +120,9 @@
         <div id="main-area" class="col-lg-9 m-0 p-0">
 
           <!-- Controls -->
-          <div id="controls" class="row m-0 p-2 bg-body-secondary">
+          <div id="controls" class="row m-0 px-2 py-0 bg-body-secondary">
 
-            <div class="col-4 p-0 align-items-center justify-content-center" id="diff-selector">
+            <div class="col-4 p-0 pt-2 text-center align-items-center justify-content-center" id="diff-selector">
             
               <div class="dropdown">
                 <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -133,6 +133,11 @@
                   <li><a class="dropdown-item" data-value="Normal">Normal</a></li>
                   <li><a class="dropdown-item" data-value="Hard">Hard</a></li>
                 </ul>
+              </div>
+
+              <div id="diff-selection">
+                <p class="m-0">Current selection:</p>
+                <span>Easy</span>
               </div>
             
             </div>
