Adjusted styling of the Controls area and its Start and Reset buttons

--- a/game.html
+++ b/game.html
@@ -122,6 +122,7 @@
           <!-- Controls -->
           <div id="controls" class="row m-0 px-2 py-0 bg-body-secondary">
 
+            <!-- Difficulty Selector -->
             <div class="col-4 p-0 pt-2 text-center align-items-center justify-content-center" id="diff-selector">
             
               <div class="dropdown">
@@ -135,19 +136,20 @@
                 </ul>
               </div>
 
-              <div id="diff-selection">
-                <p class="m-0">Current selection:</p>
-                <span>Easy</span>
+              <div id="diff-selection" class="mt-1">
+                Mode: Easy!
               </div>
             
             </div>
 
-            <div class="col-4 p-0 d-flex align-items-center justify-content-center" id="start">
-              <button type="button" class="btn btn-lg btn-success" id="startButton" aria-label="Start">Start</button>
+            <!-- Start Button -->
+            <div class="col-4 p-2 d-flex align-items-center justify-content-center" id="start">
+              <button type="button" class="btn btn-success" id="startButton" aria-label="Start">Start</button>
             </div>
 
+            <!-- Reset Button -->
             <div class="col-4 p-0 d-flex align-items-center justify-content-center" id="reset">
-              <button type="button" class="btn btn-sm btn-danger" id="resetButton" aria-label="Reset">Reset</button>
+              <button type="button" class="btn btn-danger" id="resetButton" aria-label="Reset">Reset</button>
             </div>
 
           </div>
