Styled the tile-grid and the tiles themselves, as well as added the tile class to the header-logo

--- a/game.html
+++ b/game.html
@@ -39,7 +39,7 @@
 
           <div id="header" class="col-sm-7 p-0 mb-0 mt-2 my-sm-2 d-flex align-items-center justify-content-center mx-auto">
             <a class="navbar-brand" href="#">
-              <div id="logo" class="mx-2"></div>
+              <div id="logo" class="mx-2 tile"></div>
             </a>
             <h1 class="my-0 mx-2">Match-A-Tile</h1>
           </div>
@@ -149,26 +149,34 @@
 
             <!-- Reset Button -->
             <div class="col-4 p-0 d-flex align-items-center justify-content-center" id="reset">
-              <button type="button" class="btn btn-danger" id="resetButton" aria-label="Reset">Reset</button>
+              <button type="button" class="btn btn-danger py-0" id="resetButton" aria-label="Reset">Reset</button>
             </div>
 
           </div>
 
           <!-- Game Area -->
-          <div id="game-area" class="row m-0 p-0">
-            <div class="col p-0">
+          <div id="game-area" class="container-fluid p-0">
+            <div class="row m-0 py-4">
 
-              <div class="grid-container my-4">
-                <div class="grid-item tile" id="tile-1"></div>
-                <div class="grid-item tile" id="tile-2"></div>
-                <div class="grid-item tile" id="tile-3"></div>
-                <div class="grid-item tile" id="tile-4"></div>
-                <div class="grid-item tile" id="tile-5"></div>
-                <div class="grid-item tile" id="tile-6"></div>
-                <div class="grid-item tile" id="tile-7"></div>
-                <div class="grid-item tile" id="tile-8"></div>
-                <div class="grid-item tile" id="tile-9"></div>
-              </div>
+              <div class="col-2"></div>
+
+                <div class="col-8 m-0 p-0">
+
+                  <div class="grid-container m-0 p-0">
+                    <div class="grid-item tile" id="tile-1"></div>
+                    <div class="grid-item tile" id="tile-2"></div>
+                    <div class="grid-item tile" id="tile-3"></div>
+                    <div class="grid-item tile" id="tile-4"></div>
+                    <div class="grid-item tile" id="tile-5"></div>
+                    <div class="grid-item tile" id="tile-6"></div>
+                    <div class="grid-item tile" id="tile-7"></div>
+                    <div class="grid-item tile" id="tile-8"></div>
+                    <div class="grid-item tile" id="tile-9"></div>
+                  </div>
+
+                </div>
+
+              <div class="col-2"></div>
 
             </div>
           </div>
