Adjusted styling for all buttons and sidebar

--- a/game.html
+++ b/game.html
@@ -120,7 +120,7 @@
         <div id="side-bar" class="col-lg-3 m-0 p-2 d-none d-lg-block">
           
           <!-- About -->
-          <button id="about-btn" class="btn btn-secondary dropdown-toggle w-100" type="button" data-bs-toggle="dropdown"
+          <button id="about-btn" class="btn btn-dark dropdown-toggle w-100" type="button" data-bs-toggle="dropdown"
             data-bs-auto-close="false" aria-expanded="true" aria-controls="about-text">
             About
           </button>
@@ -135,7 +135,7 @@
           </div>
 
           <!-- Instructions -->
-          <button id="instructions-btn" class="btn btn-secondary dropdown-toggle w-100" type="button" data-bs-toggle="dropdown"
+          <button id="instructions-btn" class="btn btn-dark dropdown-toggle w-100" type="button" data-bs-toggle="dropdown"
             data-bs-auto-close="false" aria-expanded="true" aria-controls="instructions-text">
             Instructions
           </button>
@@ -161,7 +161,7 @@
             <div class="col-4 p-0 pt-2 text-center align-items-center justify-content-center" id="diff-selector">
             
               <div class="dropdown">
-                <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="btn btn-sm btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Difficulty
                 </button>
                 <ul class="dropdown-menu dropdown-menu-dark">
