--- a/game.html
+++ b/game.html
@@ -221,16 +221,16 @@
               <div class="row m-0 p-0">
                 <div class="col m-0 p-0">
 
-                  <div id="p-tiles" class="flex-container my-3 mx-3 mx-sm-5 p-0">
-                    <div class="grid-item tile my-1 mx-1 mx-sm-3" id="p-tile-1"></div>
-                    <div class="grid-item tile my-1 mx-1 mx-sm-3" id="p-tile-2"></div>
-                    <div class="grid-item tile my-1 mx-1 mx-sm-3" id="p-tile-3"></div>
-                    <div class="grid-item tile my-1 mx-1 mx-sm-3" id="p-tile-4"></div>
-                    <div class="grid-item tile my-1 mx-1 mx-sm-3" id="p-tile-5"></div>
-                    <div class="grid-item tile my-1 mx-1 mx-sm-3" id="p-tile-6"></div>
-                    <div class="grid-item tile my-1 mx-1 mx-sm-3" id="p-tile-7"></div>
-                    <div class="grid-item tile my-1 mx-1 mx-sm-3" id="p-tile-8"></div>
-                    <div class="grid-item tile my-1 mx-1 mx-sm-3" id="p-tile-9"></div>
+                  <div id="p-tiles" class="flex-container my-3 mx-auto p-0">
+                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-1"></div>
+                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-2"></div>
+                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-3"></div>
+                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-4"></div>
+                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-5"></div>
+                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-6"></div>
+                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-7"></div>
+                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-8"></div>
+                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-9"></div>
                   </div>
 
                 </div>
