--- a/game.html
+++ b/game.html
@@ -113,7 +113,7 @@
       </header>
 
       <!-- Main Area -->
-      <main class="container-fluid m-0 p-0 vh-100">
+      <main class="container-fluid m-0 p-0">
         <div class="row m-0 p-0 h-100">
 
           <!-- Side Bar -->
@@ -196,7 +196,6 @@
                 <div class="col-2"></div>
 
                   <div class="col-8 m-0 p-0">
-
                     <div id="c-tiles" class="grid-container m-0 p-0">
                       <div class="grid-item tile" id="c-tile-1"></div>
                       <div class="grid-item tile" id="c-tile-2"></div>
@@ -208,7 +207,6 @@
                       <div class="grid-item tile" id="c-tile-8"></div>
                       <div class="grid-item tile" id="c-tile-9"></div>
                     </div>
-
                   </div>
 
                 <div class="col-2"></div>
@@ -220,7 +218,6 @@
             <div id="player-area" class="container-fluid p-0">
               <div class="row m-0 p-0">
                 <div class="col m-0 p-0">
-
                   <div id="p-tiles" class="flex-container my-3 mx-auto p-0">
                     <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-1"></div>
                     <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-2"></div>
@@ -232,16 +229,20 @@
                     <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-8"></div>
                     <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-9"></div>
                   </div>
-
                 </div>
               </div>
             </div>
 
           </div>
 
+        </div>
       </main>
 
-    </div>
+      <footer class="bg-dark-subtle text-black text-center py-3 mb-auto">
+        <div class="container">
+          <p class="m-0">&copy; Match-a-Tile</p>
+        </div>
+      </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
