--- a/game.html
+++ b/game.html
@@ -196,7 +196,7 @@
 
               <div class="col-2"></div>
 
-                <div class="col-8 m-0 m-lg-3 p-0">
+                <div class="col-8 m-0 my-lg-3 p-0">
                   <div id="c-tiles" class="grid-container m-0 p-0">
                     <div class="grid-item tile" id="c-tile-1"></div>
                     <div class="grid-item tile" id="c-tile-2"></div>
@@ -218,7 +218,7 @@
           <!-- Player Area -->
           <div id="player-area" class="container-fluid p-0">
             <div class="row m-0 p-0">
-              <div class="col m-0 m-lg-3 p-0">
+              <div class="col m-0 my-lg-3 p-0">
                 <div id="p-tiles" class="flex-container my-3 mx-auto p-0">
                   <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-1"></div>
                   <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-2"></div>
