Adjusted size of computer tiles and bottom margin for its container

--- a/game.html
+++ b/game.html
@@ -214,7 +214,7 @@
             </div>
 
             <div class="row m-0 p-0">
-              <div class="col mx-auto m-0 my-lg-3 p-0">
+              <div class="col mx-auto m-0 mb-3 p-0">
                 <div id="c-tiles" class="grid-container m-0 p-0">
                   <div class="grid-item tile" id="c-tile-1"></div>
                   <div class="grid-item tile" id="c-tile-2"></div>
