--- a/game.html
+++ b/game.html
@@ -115,7 +115,7 @@
 
       <!-- Main Area -->
       <main class="container-fluid m-0 p-0">
-        <div class="row m-0 p-0">
+        <div class="row m-0 p-0 h-100">
 
           <!-- Side Bar -->
           <div id="side-bar" class="col-lg-3 m-0 p-2 d-none d-lg-block">
@@ -193,7 +193,7 @@
             <!-- Computer Area -->
             <div id="computer-area" class="container-fluid p-0">
 
-              <div class="row m-0 p-0">
+              <div id="timer-score" class="row m-0 p-0">
 
                 <div class="col-6">
                   <div id="timer-container" class="text-center d-flex justify-content-center m-0 p-0">
@@ -232,20 +232,18 @@
             </div>
 
             <!-- Player Area -->
-            <div id="player-area" class="container-fluid p-0">
-              <div class="row m-0 p-0">
-                <div class="col m-0 my-lg-3 p-0">
-                  <div id="p-tiles" class="flex-container my-3 mx-auto p-0">
-                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-1"></div>
-                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-2"></div>
-                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-3"></div>
-                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-4"></div>
-                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-5"></div>
-                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-6"></div>
-                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-7"></div>
-                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-8"></div>
-                    <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-9"></div>
-                  </div>
+            <div id="player-area" class="row m-0 p-0">
+              <div class="col m-0 my-lg-3 p-0">
+                <div id="p-tiles" class="flex-container my-3 mx-auto p-0">
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-1"></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-2"></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-3"></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-4"></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-5"></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-6"></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-7"></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-8"></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-9"></div>
                 </div>
               </div>
             </div>
