--- a/game.html
+++ b/game.html
@@ -128,10 +128,13 @@
 
             <div id="about-text" class="border rounded w-100">
               <p class="p-2">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Voluptatibus ratione esse dolorem. Veritatis, itaque? 
-                Consequuntur dolore tempore nihil laudantium recusandae 
-                assumenda, aperiam provident ipsa totam.
+                The 'Match-a-Tile' game is a memory challenge based on 
+                <a href="https://en.wikipedia.org/wiki/Kim%27s_Game" class="text-decoration-none text-info">
+                  'Kim's Game'
+                </a>
+                , whereby the player is shown a number of items, which are then covered after a period of time.
+                The player then has to remember the items they were shown and guess what was there. In this version
+                of the game, players must match the tiles at the bottom of the screen with the computer's tiles.
               </p>
             </div>
 
@@ -143,10 +146,30 @@
             
             <div id="instructions-text" class="border rounded w-100">
               <p class="p-2">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Voluptatibus ratione esse dolorem. Veritatis, itaque?
-                Consequuntur dolore tempore nihil laudantium recusandae
-                assumenda, aperiam provident ipsa totam.
+                Before you begin, select a Difficulty Mode. The modes will change the amount of time the player
+                has to guess the tiles. For example:
+              </p>
+              <ul>
+                <li>Easy: 60 minute</li>
+                <li>Normal: 30 seconds</li>
+                <li>Hard: 15 seconds</li>
+              </ul>
+              <p class="p-2">
+                When you are ready, click 'Start' and a 10 second countdown timer will begin. At the start of the 
+                countdown timer, the computer tiles will appear - take this time to remember each tile and commit
+                them to memory! 
+              </p>
+              <p class="p-2">
+                Once the 10 seconds are over, the computer tiles flip over and the player tiles appear. The game 
+                timer will then begin. Within this time, the player must click on a player tile at the bottom of 
+                the screen and match it with the correct computer tile. 
+              </p>
+              <p class="p-2">
+                The game will end once all tiles have been matched (or attempted to be matched!), or when the timer
+                has run out. Your score will then be displayed in the top right corner of the game area.
+              </p>
+              <p class="p-2">
+                If you'd like to reset the game at any point simply click the 'Reset' button. Happy gaming!
               </p>
             </div>
 
