Added About info and Instructions to modals in the header and added styling to each

--- a/game.html
+++ b/game.html
@@ -58,21 +58,22 @@
                 <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h1 class="modal-title fs-5" id="aboutModalLabel">About the game</h1>
+                      <h1 class="modal-title fs-5" id="aboutModalLabel">About</h1>
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum cupiditate illum reprehenderit amet quae
-                      veritatis quidem, provident vero! Fuga blanditiis repellendus aut maxime, nulla nemo rem eos maiores nobis error
-                      perferendis? Praesentium cum possimus, ad numquam, minima, illum placeat voluptate facere beatae iure doloribus
-                      magni nisi expedita. Totam consectetur deserunt odit molestias quisquam aliquam, earum perferendis amet nesciunt
-                      eligendi porro consequatur est natus voluptatem ratione consequuntur quasi officia eaque tenetur placeat illo
-                      aliquid corrupti? Quos ex rem, accusantium provident officiis odit quia illo distinctio blanditiis magni
-                      laboriosam voluptas aut, sapiente assumenda dolore eaque cupiditate, necessitatibus tempora sequi voluptatibus
-                      tempore eligendi.
+                    <div class="modal-body text-justify">
+                      <p class="p-2">
+                        The 'Match-a-Tile' game is a memory challenge based on
+                        <a href="https://en.wikipedia.org/wiki/Kim%27s_Game" class="text-decoration-none text-info">
+                          'Kim's Game'
+                        </a>
+                        , whereby the player is shown a number of items, which are then covered after a period of time.
+                        The player then has to remember the items they were shown and guess what was there. In this version
+                        of the game, players must match the tiles at the bottom of the screen with the computer's tiles.
+                      </p>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
                     </div>
                   </div>
                 </div>
@@ -90,18 +91,36 @@
                       <h1 class="modal-title fs-5" id="instructionsModalLabel">Instructions</h1>
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum cupiditate illum reprehenderit amet quae
-                      veritatis quidem, provident vero! Fuga blanditiis repellendus aut maxime, nulla nemo rem eos maiores nobis error
-                      perferendis? Praesentium cum possimus, ad numquam, minima, illum placeat voluptate facere beatae iure doloribus
-                      magni nisi expedita. Totam consectetur deserunt odit molestias quisquam aliquam, earum perferendis amet nesciunt
-                      eligendi porro consequatur est natus voluptatem ratione consequuntur quasi officia eaque tenetur placeat illo
-                      aliquid corrupti? Quos ex rem, accusantium provident officiis odit quia illo distinctio blanditiis magni
-                      laboriosam voluptas aut, sapiente assumenda dolore eaque cupiditate, necessitatibus tempora sequi voluptatibus
-                      tempore eligendi.
+                    <div class="modal-body text-justify">
+                      <p class="p-2">
+                        Before you begin, select a Difficulty Mode. The modes will change the amount of time the player
+                        has to guess the tiles. For example:
+                      </p>
+                      <ul>
+                        <li>Easy: 60 seconds</li>
+                        <li>Normal: 30 seconds</li>
+                        <li>Hard: 15 seconds</li>
+                      </ul>
+                      <p class="p-2">
+                        When you are ready, click 'Start' and a 10 second countdown timer will begin. At the start of the
+                        countdown timer, the computer tiles will appear - take this time to remember each tile and commit
+                        them to memory!
+                      </p>
+                      <p class="p-2">
+                        Once the 10 seconds are over, the computer tiles flip over and the player tiles appear. The game
+                        timer will then begin. Within this time, the player must click on a player tile at the bottom of
+                        the screen and match it with the correct computer tile.
+                      </p>
+                      <p class="p-2">
+                        The game will end once all tiles have been matched (or attempted to be matched!), or when the timer
+                        has run out. Your score will then be displayed in the top right corner of the game area.
+                      </p>
+                      <p class="p-2">
+                        If you'd like to reset the game at any point simply click the 'Reset' button. Happy gaming!
+                      </p>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
                     </div>
                   </div>
                 </div>
@@ -150,7 +169,7 @@
                 has to guess the tiles. For example:
               </p>
               <ul>
-                <li>Easy: 60 minute</li>
+                <li>Easy: 60 seconds</li>
                 <li>Normal: 30 seconds</li>
                 <li>Hard: 15 seconds</li>
               </ul>
