Added default text to the mode-display span, to show Easy as the default mode

--- a/game.html
+++ b/game.html
@@ -208,14 +208,14 @@
                     Mode
                   </button>
                   <ul class="dropdown-menu dropdown-menu-dark">
-                    <li><a class="dropdown-item" data-value="Easy">Easy</a></li>
-                    <li><a class="dropdown-item" data-value="Normal">Normal</a></li>
-                    <li><a class="dropdown-item" data-value="Hard">Hard</a></li>
+                    <li><a class="dropdown-item mode-item" data-value="Easy">Easy</a></li>
+                    <li><a class="dropdown-item mode-item" data-value="Normal">Normal</a></li>
+                    <li><a class="dropdown-item mode-item" data-value="Hard">Hard</a></li>
                   </ul>
                 </div>
 
                 <div id="mode-selection" class="mt-1">
-                  Mode: <span id="mode">Easy</span>
+                  Mode: <span id="mode-display">EASY</span>
                 </div>
               
               </div>
