Adjusted font size and weight for mode displayed

--- a/game.html
+++ b/game.html
@@ -215,7 +215,7 @@
                 </div>
 
                 <div id="mode-selection" class="mt-1">
-                  Mode: <span id="mode-display">EASY</span>
+                  Mode: <span id="mode-display" class="fs-5 fw-bold">EASY</span>
                 </div>
               
               </div>
