--- a/game.html
+++ b/game.html
@@ -261,15 +261,15 @@
               <div class="row m-0 p-0">
                 <div class="col mx-auto m-0 mb-3 p-0">
                   <div id="c-tiles" class="grid-container m-0 p-0">
-                    <div class="grid-item tile" id="c-tile-1"></div>
-                    <div class="grid-item tile" id="c-tile-2"></div>
-                    <div class="grid-item tile" id="c-tile-3"></div>
-                    <div class="grid-item tile" id="c-tile-4"></div>
-                    <div class="grid-item tile" id="c-tile-5"></div>
-                    <div class="grid-item tile" id="c-tile-6"></div>
-                    <div class="grid-item tile" id="c-tile-7"></div>
-                    <div class="grid-item tile" id="c-tile-8"></div>
-                    <div class="grid-item tile" id="c-tile-9"></div>
+                    <div class="grid-item tile" id="c-tile-1"><img src="" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-2"><img src="" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-3"><img src="" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-4"><img src="" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-5"><img src="" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-6"><img src="" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-7"><img src="" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-8"><img src="" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-9"><img src="" alt=""></div>
                   </div>
                 </div>
               </div>
@@ -280,15 +280,15 @@
             <div id="player-area" class="row m-0 p-0">
               <div class="col m-0 my-lg-3 p-0">
                 <div id="p-tiles" class="flex-container my-3 mx-auto p-0">
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-1"></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-2"></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-3"></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-4"></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-5"></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-6"></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-7"></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-8"></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-9"></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-1"><img src="" alt=""></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-2"><img src="" alt=""></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-3"><img src="" alt=""></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-4"><img src="" alt=""></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-5"><img src="" alt=""></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-6"><img src="" alt=""></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-7"><img src="" alt=""></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-8"><img src="" alt=""></div>
+                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-9"><img src="" alt=""></div>
                 </div>
               </div>
             </div>
