--- a/game.html
+++ b/game.html
@@ -261,15 +261,15 @@
               <div class="row m-0 p-0">
                 <div class="col mx-auto m-0 mb-3 p-0">
                   <div id="c-tiles" class="grid-container m-0 p-0">
-                    <div class="grid-item tile" id="c-tile-1"><img src="" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-2"><img src="" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-3"><img src="" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-4"><img src="" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-5"><img src="" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-6"><img src="" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-7"><img src="" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-8"><img src="" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-9"><img src="" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-1"><img src="images/book.svg" alt="" class=""></div>
+                    <div class="grid-item tile" id="c-tile-2"><img src="images/chess.svg" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-3"><img src="images/dice.svg" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-4"><img src="images/dragon.svg" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-5"><img src="images/dungeon.svg" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-6"><img src="images/gamepad.svg" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-7"><img src="images/shield.svg" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-8"><img src="images/puzzle.svg" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-9"><img src="images/scroll.svg" alt=""></div>
                   </div>
                 </div>
               </div>
