Changed the name of a file in one of the img tags

--- a/game.html
+++ b/game.html
@@ -261,8 +261,8 @@
               <div class="row m-0 p-0">
                 <div class="col mx-auto m-0 mb-3 p-0">
                   <div id="c-tiles" class="grid-container m-0 p-0">
-                    <div class="grid-item tile" id="c-tile-1"><img src="images/book.svg" alt="" class=""></div>
-                    <div class="grid-item tile" id="c-tile-2"><img src="images/chess.svg" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-1"><img src="images/book.svg" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-2"><img src="images/chess-king-rook.svg" alt=""></div>
                     <div class="grid-item tile" id="c-tile-3"><img src="images/dice.svg" alt=""></div>
                     <div class="grid-item tile" id="c-tile-4"><img src="images/dragon.svg" alt=""></div>
                     <div class="grid-item tile" id="c-tile-5"><img src="images/dungeon.svg" alt=""></div>
