Added content divs each with a front and back content dive respectively for each computer tile

--- a/game.html
+++ b/game.html
@@ -261,15 +261,60 @@
               <div class="row m-0 p-0">
                 <div class="col mx-auto m-0 mb-3 p-0">
                   <div id="c-tiles" class="grid-container m-0 p-0">
-                    <div class="grid-item tile" id="c-tile-1"><img src="images/book.svg" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-2"><img src="images/chess-king-rook.svg" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-3"><img src="images/dice.svg" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-4"><img src="images/dragon.svg" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-5"><img src="images/dungeon.svg" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-6"><img src="images/gamepad.svg" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-7"><img src="images/shield.svg" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-8"><img src="images/puzzle.svg" alt=""></div>
-                    <div class="grid-item tile" id="c-tile-9"><img src="images/scroll.svg" alt=""></div>
+                    <div class="grid-item tile" id="c-tile-1">
+                      <div class="t-inner">
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
+                      </div>
+                    </div>
+                    <div class="grid-item tile" id="c-tile-2">
+                      <div class="t-inner">
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
+                      </div>
+                    </div>
+                    <div class="grid-item tile" id="c-tile-3">
+                      <div class="t-inner">
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
+                      </div>
+                    </div>
+                    <div class="grid-item tile" id="c-tile-4">
+                      <div class="t-inner">
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
+                      </div>
+                    </div>
+                    <div class="grid-item tile" id="c-tile-5">
+                      <div class="t-inner">
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
+                      </div>
+                    </div>
+                    <div class="grid-item tile" id="c-tile-6">
+                      <div class="t-inner">
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
+                      </div>
+                    </div>
+                    <div class="grid-item tile" id="c-tile-7">
+                      <div class="t-inner">
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
+                      </div>
+                    </div>
+                    <div class="grid-item tile" id="c-tile-8">
+                      <div class="t-inner">
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
+                      </div>
+                    </div>
+                    <div class="grid-item tile" id="c-tile-9">
+                      <div class="t-inner">
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
