--- a/index.html
+++ b/index.html
@@ -324,16 +324,25 @@
             <!-- Player Area -->
             <div id="player-area" class="row m-0 p-0">
               <div class="col m-0 my-lg-3 p-0">
-                <div id="p-tiles" class="flex-container my-3 mx-auto p-0">
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-1"><img src="" alt=""></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-2"><img src="" alt=""></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-3"><img src="" alt=""></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-4"><img src="" alt=""></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-5"><img src="" alt=""></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-6"><img src="" alt=""></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-7"><img src="" alt=""></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-8"><img src="" alt=""></div>
-                  <div class="grid-item tile my-1 mx-2 mx-sm-3" id="p-tile-9"><img src="" alt=""></div>
+                <div id="p-tiles" class="flex-container my-2 mx-auto p-0">
+                  <div class="grid-item tile m-1" id="p-tile-1"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-2"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-3"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-4"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-5"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-6"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-7"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-8"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-9"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-10"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-11"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-12"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-13"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-14"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-15"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-16"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-17"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-18"><img src="" alt=""></div>
                 </div>
               </div>
             </div>
