--- a/index.html
+++ b/index.html
@@ -325,24 +325,102 @@
             <div id="player-area" class="row m-0 p-0">
               <div class="col m-0 my-lg-3 p-0">
                 <div id="p-tiles" class="flex-container my-2 mx-auto p-0">
-                  <div class="grid-item tile m-1" id="p-tile-1"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-2"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-3"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-4"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-5"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-6"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-7"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-8"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-9"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-10"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-11"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-12"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-13"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-14"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-15"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-16"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-17"><img src="" alt=""></div>
-                  <div class="grid-item tile m-1" id="p-tile-18"><img src="" alt=""></div>
+                  <div class="grid-item tile m-1" id="p-tile-1">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-2">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-3">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-4">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-5">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-6">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-7">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-8">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-9">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-10">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-11">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-12">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-13">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-14">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-15">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
+                  <div class="grid-item tile m-1" id="p-tile-16">
+                    <div class="t-inner">
+                      <div class="t-front"></div>
+                      <div class="t-back"></div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
