--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <!-- Player Area -->
             <div id="player-area" class="row m-0 p-0">
               <div class="col m-0 my-lg-3 p-0">
-                <div id="p-tiles" class="flex-container my-2 mx-auto p-0">
+                <div id="p-tiles" class="flex-container my-2 mx-md-3 p-0">
                   <div class="grid-item tile m-1" id="p-tile-1">
                     <div class="t-inner">
                       <div class="t-front"></div>
