feat: removed irrelevant 't-content' class

--- a/index.html
+++ b/index.html
@@ -262,57 +262,57 @@
                 <div class="col mx-auto m-0 mb-3 p-0">
                   <div id="c-tiles" class="grid-container m-0 p-0">
                     <div class="tile" id="c-tile-1">
-                      <div class="t-inner ">
-                        <div class="t-content t-front"></div>
-                        <div class="t-content t-back"></div>
+                      <div class="t-inner flipped">
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
                       </div>
                     </div>
                     <div class="tile" id="c-tile-2">
                       <div class="t-inner flipped">
-                        <div class="t-content t-front"></div>
-                        <div class="t-content t-back"></div>
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
                       </div>
                     </div>
                     <div class="tile" id="c-tile-3">
                       <div class="t-inner flipped">
-                        <div class="t-content t-front"></div>
-                        <div class="t-content t-back"></div>
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
                       </div>
                     </div>
                     <div class="tile" id="c-tile-4">
                       <div class="t-inner flipped">
-                        <div class="t-content t-front"></div>
-                        <div class="t-content t-back"></div>
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
                       </div>
                     </div>
                     <div class="tile" id="c-tile-5">
                       <div class="t-inner flipped">
-                        <div class="t-content t-front"></div>
-                        <div class="t-content t-back"></div>
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
                       </div>
                     </div>
                     <div class="tile" id="c-tile-6">
                       <div class="t-inner flipped">
-                        <div class="t-content t-front"></div>
-                        <div class="t-content t-back"></div>
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
                       </div>
                     </div>
                     <div class="tile" id="c-tile-7">
                       <div class="t-inner flipped">
-                        <div class="t-content t-front"></div>
-                        <div class="t-content t-back"></div>
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
                       </div>
                     </div>
                     <div class="tile" id="c-tile-8">
                       <div class="t-inner flipped">
-                        <div class="t-content t-front"></div>
-                        <div class="t-content t-back"></div>
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
                       </div>
                     </div>
                     <div class="tile" id="c-tile-9">
                       <div class="t-inner flipped">
-                        <div class="t-content t-front"></div>
-                        <div class="t-content t-back"></div>
+                        <div class="t-front"></div>
+                        <div class="t-back"></div>
                       </div>
                     </div>
                   </div>
