feat: added 'flipped' class to all tiles

--- a/index.html
+++ b/index.html
@@ -330,97 +330,97 @@
               <div class="col m-0 my-lg-3 mx-md-3 p-0">
                 <div id="p-tiles" class="flex-container my-2 mx-auto p-0">
                   <div class="tile m-1" id="p-tile-1">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-2">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-3">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-4">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-5">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-6">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-7">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-8">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-9">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-10">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-11">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-12">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-13">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-14">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-15">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
                   </div>
                   <div class="tile m-1" id="p-tile-16">
-                    <div class="t-inner">
+                    <div class="t-inner flipped">
                       <div class="t-front"></div>
                       <div class="t-back"></div>
                     </div>
